# cogito_api

./: .dockerignore  .env.example  .env.sourced  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  init.sql  test.html
.sqlx/: query-34d36df0a315a7b2c4b1be12e7ddffad61b1daa4a1a08668883a27ea641446a1.json  query-4f47b0e85bd710877c84678f2dceebf5764a2f681ab447789660fb98ee9aa0ec.json  query-5e989b9196919c220ef177df8ae67016286138925b3d1bb3d8e677842062d0a6.json  query-65b1487c46bb050524858ef3ebf8876af384eee82317f2be5ad4b0ff0914c273.json  query-69f9cb9598702ad2f7978133fe46292cc685befef62ca86dd6c25b84710da13f.json  query-870cf811a48681f3d1240758c0e74d82d7de6f62a74c6f7456e2ff5e02ea5ae0.json  query-8a5f00c09007a29b947e1a77b460dd09fbf97c999db03b4d23dfdf79c7be8617.json  query-9063b4d0997264112ba9b35b654185c5046ea99ab8ce92527adec23bdd03d0b5.json  query-a5b0a34439e7b79f7bd92a8ec06a9719aea371e7d35b466b9e63ce6e6830caf4.json  query-af8576e1ff48f31b3b86ed8652a297bdb3db2598d48586aceba9eb7adefe1c98.json
init/: init.sql
proto/: cogito.proto
src/: agent.rs  api_messages.rs  conversation.rs  documentation.rs  login.rs  main.rs  proto.rs  register.rs  user.rs
tests/: api_tests.rs  session_system.rs
