[package]
name = "cogito_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
tokio = { version = "1.48.0", features = ["macros"] }
utoipa = { version = "5.4.0" }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
env_logger = "0.11.8"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand = "0.8"
log = "0.4.28"
serde_json = "1.0.145"